Fixed recently used `li`s missing sufficient spacing

--- a/src/components/date_picker/super_date_picker/quick_select_popover/_quick_select_popover.scss
+++ b/src/components/date_picker/super_date_picker/quick_select_popover/_quick_select_popover.scss
@@ -24,4 +24,10 @@
 .euiQuickSelectPopover__sectionItem {
   font-size: $euiFontSizeS;
   line-height: $euiFontSizeS;
+
+  &--recentlyUsed {
+    &:not(:last-of-type) {
+      margin-bottom: $euiSizeS;
+    }
+  }
 }
